Corrección de css en menu mobile para que ocupe toda la pantalla

--- a/style.css
+++ b/style.css
@@ -127,6 +127,8 @@
     position: absolute;
     top: 61px;
     padding: 24px;
+    left: 0;
+    width: 100%;
   }
   .mobile-menu a {
     text-decoration: none;
